@@ -9,11 +9,12 @@ libdebian-installer (0.17.cvs) UNRELEASED; urgency=low
     - use size_t in hash map and mem_chunk allocer (closes: #215448)
     - install documentation.
     - add -extra lib.
+    - fix description parsing (closes: #219902)
   * Petter Reinholdtsen
     - Define PATH_MAX if it is undefined, to get this building on
       GNU/Hurd.  Patch from Santiago Vila. (Closes: #219464)
 
- -- Bastian Blank <waldi@debian.org>  Thu, 06 Nov 2003 08:46:53 +0100
+ -- Bastian Blank <waldi@debian.org>  Wed, 12 Nov 2003 18:22:47 +0100
 
 libdebian-installer (0.17) unstable; urgency=low
 
